<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.2">
  <GVL Name="GVL_Valve_Manifold" Id="{a65ade71-5feb-40d6-b167-a6053e9785c7}">
    <Declaration><![CDATA[VAR_GLOBAL
	
(**************************************************************************)
(*Erector Valve Manifold - 70A1*)
QW_70A1						AT %QB50:WORD;
QW_70A1_0					AT %QB52:WORD;
QW_70A1_1					AT %QB50:BYTE;
QW_70A1_2					AT %QB51:BYTE;
QW_70A1_3					AT %QB52:BYTE;
QW_70A1_4					AT %QB53:BYTE;

O_ER_FFlapL_Fwd				AT %QX50.0	:BOOL;	 (* 	1Y1 - ERECTOR FRONT FLAP CLOSING CYL FWD SV (LEFT)	*)
O_ER_FFlapL_Bwd				AT %QX50.1	:BOOL;	 (* 	1Y1 - ERECTOR FRONT FLAP CLOSING CYL BWD SV (LEFT)	*)	
O_ER_BFlapL_Fwd				AT %QX50.2	:BOOL;	 (* 	1Y2 - ERECTOR BOTTOM FLAP HOLD FWD SV (LEFT)	*)
O_ER_BFlapL_Bwd				AT %QX50.3	:BOOL;	 (* 	1Y2 - ERECTOR BOTTOM FLAP HOLD BWD SV (LEFT)	*)
O_ER_StpL_Up				AT %QX50.4	:BOOL;	 (* 	1Y3 - ERECTOR STOPPER CYL UP SV (LEFT)	*)
O_ER_StpL_Dn				AT %QX50.5	:BOOL;	 (* 	1Y3 - ERECTOR STOPPER CYL DN SV (LEFT)	*)
O_ER_CaseGuideL_Fwd			AT %QX50.6	:BOOL;	 (* 	1Y4 - ERECTOR CASE GUIDE CYL FWD SV (LEFT)	*)
O_ER_CaseGuideL_Bwd			AT %QX50.7	:BOOL;	 (* 	1Y4 - ERECTOR CASE GUIDE CYL BWD SV (LEFT)	*)
O_ER_RFlapL_Fwd				AT %QX51.0	:BOOL;	 (* 	1Y5 - ERECTOR REAR FLAP CLOSING CYL FWD SV (LEFT)	*)
O_ER_RFlapL_Bwd				AT %QX51.1	:BOOL;	 (* 	1Y5 - ERECTOR REAR FLAP CLOSING CYL BWD SV (LEFT)	*)
O_ER_TFlapOpnL_Fwd			AT %QX51.2	:BOOL;	 (* 	1Y6 - ERECTOR TOP FLAP OPENING CYL FWD SV (LEFT)	*)
O_ER_TFlapOpnL_Bwd			AT %QX51.3	:BOOL;	 (* 	1Y6 - ERECTOR TOP FLAP OPENING CYL BWD SV (LEFT)	*)
O_ER_TFlapClsL_Fwd			AT %QX51.4	:BOOL;	 (* 	1Y7 - ERECTOR TOP FLAP CLOSING CYL FWD SV (LEFT)	*)
O_ER_TFlapClsL_Bwd			AT %QX51.5	:BOOL;	 (* 	1Y7 - ERECTOR TOP FLAP CLOSING CYL BWD SV (LEFT)	*)
O_ER_FlapHoldL_Fwd			AT %QX51.6	:BOOL;	 (* 	1Y8 - EXIT FLAP HOLDER LEFT CYL FWD SV (FOR GLUE DISPENSING)	*)
O_ER_FlapHoldL_Bwd			AT %QX51.7	:BOOL;	 (* 	1Y8 - EXIT FLAP HOLDER LEFT CYL BWD SV (FOR GLUE DISPENSING)	*)
O_ER_ArmTilt_Fwd			AT %QX52.0	:BOOL;	 (* 	1Y9 - ERECTOR ARM TILT CYL FWD SV	*)
O_ER_ArmTilt_Bwd			AT %QX52.1	:BOOL;	 (* 	1Y9 - ERECTOR ARM TILT CYL BWD SV	*)
O_ER_Arm_Up					AT %QX52.2	:BOOL;	 (* 	1Y10 - ERECTOR ARM CYL UP SV	*)
O_ER_Arm_Dn					AT %QX52.3	:BOOL;	 (* 	1Y10 - ERECTOR ARM CYL DOWN SV	*)
O_EX_SquarenessCylL_Fwd		AT %QX52.4	:BOOL;	 (* 	1Y11 - SQUARENESS CYLINDER FORWARD (LEFT)	*)
O_EX_SquarenessCylL_Bwd		AT %QX52.5	:BOOL;	 (* 	1Y11 - SQUARENESS CYLINDER BACKWARD (LEFT)	*)
O_EX_StpCylL_Up				AT %QX52.6	:BOOL;	 (* 	1Y12 - EXIT STOPPER CYLINDER UP (LEFT)	*)
O_EX_StpCylL_Dn				AT %QX52.7	:BOOL;	 (* 	1Y12 - EXIT STOPPER CYLINDER DOWN (LEFT)	*)

	
(**************************************************************************)
(*Erector Valve Manifold - 71A1*)
QW_71A1						AT %QB60:WORD;
QW_71A1_1					AT %QB60:BYTE;
QW_71A1_2					AT %QB61:BYTE;
QW_71A1_3					AT %QB62:BYTE;
QW_71A1_4					AT %QB63:BYTE;

O_ER_FFlapR_Fwd				AT %QX60.0	:BOOL;	 (* 	2Y1 - ERECTOR FRONT FLAP CLOSING CYL FWD SV (RIGHT)	*)
O_ER_FFlapR_Bwd				AT %QX60.1	:BOOL;	 (* 	2Y1 - ERECTOR FRONT FLAP CLOSING CYL BWD SV (RIGHT)	*)	
O_ER_BFlapR_Fwd				AT %QX60.2	:BOOL;	 (* 	2Y2 - ERECTOR BOTTOM FLAP HOLD FWD SV (RIGHT)	*)
O_ER_BFlapR_Bwd				AT %QX60.3	:BOOL;	 (* 	2Y2 - ERECTOR BOTTOM FLAP HOLD BWD SV (RIGHT)	*)
O_ER_StpR_Up				AT %QX60.4	:BOOL;	 (* 	2Y3 - ERECTOR STOPPER CYL UP SV (RIGHT)	*)
O_ER_StpR_Dn				AT %QX60.5	:BOOL;	 (* 	2Y3 - ERECTOR STOPPER CYL DN SV (RIGHT)	*)
O_ER_CaseGuideR_Fwd			AT %QX60.6	:BOOL;	 (* 	2Y4 - ERECTOR CASE GUIDE CYL FWD SV (RIGHT)	*)
O_ER_CaseGuideR_Bwd			AT %QX60.7	:BOOL;	 (* 	2Y4 - ERECTOR CASE GUIDE CYL BWD SV (RIGHT)	*)
O_ER_RFlapR_Fwd				AT %QX61.0	:BOOL;	 (* 	2Y5 - ERECTOR REAR FLAP CLOSING CYL FWD SV (RIGHT)	*)
O_ER_RFlapR_Bwd				AT %QX61.1	:BOOL;	 (* 	2Y5 - ERECTOR REAR FLAP CLOSING CYL BWD SV (RIGHT)	*)
O_ER_TFlapOpnR_Fwd			AT %QX61.2	:BOOL;	 (* 	2Y6 - ERECTOR TOP FLAP OPENING CYL FWD SV (RIGHT)	*)
O_ER_TFlapOpnR_Bwd			AT %QX61.3	:BOOL;	 (* 	2Y6 - ERECTOR TOP FLAP OPENING CYL BWD SV (RIGHT)	*)
O_ER_TFlapClsR_Fwd			AT %QX61.4	:BOOL;	 (* 	2Y7 - ERECTOR TOP FLAP CLOSING CYL FWD SV (RIGHT)	*)
O_ER_TFlapClsR_Bwd			AT %QX61.5	:BOOL;	 (* 	2Y7 - ERECTOR TOP FLAP CLOSING CYL BWD SV (RIGHT)	*)
O_EX_FlapHoldR_Fwd			AT %QX61.6	:BOOL;	 (* 	2Y8 - EXIT FLAP HOLDER RIGHT CYL FWD SV (FOR GLUE DISPENSING)	*)
O_EX_FlapHoldR_Bwd			AT %QX61.7	:BOOL;	 (* 	2Y8 - EXIT FLAP HOLDER RIGHT CYL BWD SV (FOR GLUE DISPENSING)	*)
O_EX_SquarenessCylR_Fwd		AT %QX62.0	:BOOL;	 (* 	2Y9 - SQUARENESS CYLINDER FORWARD (RIGHT)	*)
O_EX_SquarenessCylR_Bwd		AT %QX62.1	:BOOL;	 (* 	2Y9 - SQUARENESS CYLINDER BACKWARD (RIGHT)	*)
O_EX_StpCylR_Up				AT %QX62.2	:BOOL;	 (* 	2Y10 - EXIT STOPPER CYLINDER UP (RIGHT)	*)
O_EX_StpCylR_Dn				AT %QX62.3	:BOOL;	 (* 	2Y10 - EXIT STOPPER CYLINDER DOWN (RIGHT)	*)

(**************************************************************************)
(*Collator Valve Manifold - 170A1*)

QW_170A1				AT %QB150:WORD;
QW_170A1_1				AT %QB150:BYTE;
QW_170A1_2				AT %QB151:BYTE;

O_CO_YPush_Dn			AT %QX150.0	:BOOL;	 (* 	3Y1 - COLLATOR X-PUSHER DOWN	*)
O_CO_YPush_Up			AT %QX150.1	:BOOL;	 (* 	3Y1 - COLLATOR X-PUSHER UP	*)
O_CO_YPush_Strk_Fwd		AT %QX150.2	:BOOL;	 (* 	3Y2 - COLLATOR Y PUSHER STROKE CYL FWD SV	*)
O_CO_YPush_Strk_Bwd		AT %QX150.3	:BOOL;	 (* 	3Y2 - COLLATOR Y PUSHER STROKE CYL BWD SV	*)
O_CO_Brdg_Fwd			AT %QX150.4	:BOOL;	 (* 	3Y3 - COLLATOR PUSHER BRIDGE CYL FWD SV	*)
O_CO_Brdg_Bwd			AT %QX150.5	:BOOL;	 (* 	3Y3 - COLLATOR PUSHER BRIDGE CYL BWD SV	*)
O_CO_RFlapGuide_Fwd		AT %QX150.6	:BOOL;	 (* 	3Y5 - COLLATOR PUSHER REAR GUIDE FLAP BRIDGE CYL FWD SV	*)
O_CO_RFlapGuide_Bwd		AT %QX150.7	:BOOL;	 (* 	3Y5 - COLLATOR PUSHER REAR GUIDE FLAP BRIDGE CYL BWD SV	*)
O_CO_FFlapBrdg_Fwd		AT %QX151.0	:BOOL;	 (* 	3Y4 - COLLATOR PUSHER FRONT GUIDE FLAP BRIDGE CYL FWD SV	*)
O_CO_FFlapBrdg_Bwd		AT %QX151.1	:BOOL;	 (* 	3Y4 - COLLATOR PUSHER FRONT GUIDE FLAP BRIDGE CYL BWD SV	*)
O_CO_PalletLocating_Fwd	AT %QX151.2 :BOOL;
O_CO_PalletLocating_Bwd	AT %QX151.3 :BOOL;
O_CO_Sing1_Fwd			AT %QX151.4 :BOOL;
O_CO_Sing1_Bwd			AT %QX151.5 :BOOL;
O_CO_Sing2_Fwd			AT %QX151.6 :BOOL;
O_CO_Sing2_Bwd			AT %QX151.7 :BOOL;

(**************************************************************************)
(*Exit Valve Manifold - 350A1*)

QW_350A1				AT %QB350:WORD;
QB350A1_1				AT %QB350:BYTE;
QB350A1_2				AT %QB351:BYTE;

O_EL_TapeOpening_Fwd	AT %QX350.0	:BOOL;	 (* 	4Y1 - VERTICAL TAPE OPENING CYL FWD SV	*)
O_EL_TapeOpening_Bwd	AT %QX350.1	:BOOL;	 (* 	4Y1 - VERTICAL TAPE OPENING CYL BWD SV	*)
O_EL_TiltLift_Fwd		AT %QX350.2	:BOOL;	 (* 	4Y2 - VERTICAL EXIT TILT LIFT CYL FWD SV	*)
O_EL_TiltLift_Bwd		AT %QX350.3	:BOOL;	 (* 	4Y2 - VERTICAL EXIT TILT LIFT CYL BWD SV	*)
O_EL_TapeLock_ON		AT %QX350.4	:BOOL;	 (* 	4Y3 - VERTICAL WA TAPE LOCK ACTIVE SV	*)
O_EL_TiltVacLift_Up		AT %QX350.6	:BOOL;	 (* 	4Y4 - VERTICAL EXIT TILT VACUUM LIFT CYL UP SV	*)
O_EL_TiltVacLift_Dn		AT %QX350.7	:BOOL;	 (* 	4Y4 - VERTICAL EXIT TILT VACUUM LIFT CYL DN SV	*)
O_EL_TapeChange_Fwd		AT %QX351.0	:BOOL;	 (* 	4Y5 - VERTICAL TAPE CHANGE CYL FWD SV	*)
O_EL_TapeChange_Bwd		AT %QX351.1	:BOOL;	 (* 	4Y5 - VERTICAL TAPE CHANGE CYL BWD SV	*)
						
















O_ER_BFlapCloseL_Fwd		AT %QX950.0	:BOOL;	 (* 	1Y1 - ERECTOR BOTTOM FLAP CLOSE FWD SV (LEFT)	*)
O_ER_BFlapCloseL_Bwd		AT %QX950.1	:BOOL;	 (* 	1Y1 - ERECTOR BOTTOM FLAP CLOSE BWD SV (LEFT)	*)
					
O_ER_BFlapCloseR_Fwd		AT %QX952.0	:BOOL;	 (* 	1Y9 - ERECTOR BOTTOM FLAP CLOSE FWD SV (RIGHT)	*)
O_ER_BFlapCloseR_Bwd		AT %QX952.1	:BOOL;	 (* 	1Y9 - ERECTOR BOTTOM FLAP CLOSE BWD SV (RIGHT)	*)

O_CO_StkRel_Fwd		AT %QX150.2	:BOOL;	 (* 	2Y2 - COLLATOR STACK RELEASE CYLINDER FWD SV	*)
O_CO_StkRel_Bwd		AT %QX150.3	:BOOL;	 (* 	2Y2 - COLLATOR STACK RELEASE CYLINDER BWD SV	*)








END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>